Fix wrong in-place preview when doing perspective rotations

We should scale camera positions as well.

BUG:431813